--- a/index.html
+++ b/index.html
@@ -319,11 +319,18 @@
         <div class="container mx-auto px-6 py-12">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div class="md:col-span-1">
-                     <a href="#" class="text-2xl font-semibold text-white flex items-center">
+                     <!-- <a href="#" class="text-2xl font-semibold text-white flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-2 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
                         </svg>
                         DSI
+                    </a> -->
+                    <a href="#" class="text-2xl font-semibold text-white flex flex-col items-start gap-y-2">
+                        <img src="public/images/dsi-logo.png" class="h-auto max-h-10" alt="dsi-logo">
+                        <div class="leading-tight">
+                            <span>Digital Sandi Informasi</span>
+                        </div>
+                        <span class="block text-sm font-light italic text-gray-300">Mobile Lifestyle</span>
                     </a>
                     <p class="text-gray-400 mt-4" data-lang-key="footerTagline"></p>
                 </div>
