Add partners section and localization for partner logos in index.html

--- a/index.html
+++ b/index.html
@@ -254,6 +254,34 @@
             </div>
         </section>
 
+         <!-- Our Partners Section -->
+         <section id="partners" class="py-24 md:py-36 fade-in-section">
+            <div class="container mx-auto px-6">
+                <div class="text-center mb-16">
+                    <h2 class="text-4xl md:text-5xl font-bold text-white" data-lang-key="partnersTitle"></h2>
+                    <p class="text-lg text-gray-400 mt-4" data-lang-key="partnersSubtitle"></p>
+                </div>
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-12 items-center max-w-5xl mx-auto">
+                    <!-- Telkomsel -->
+                    <div class="flex justify-center">
+                        <img src="public/images/mytelkomsel-logo.png" alt="mytelkomsel-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                    </div>
+                    <!-- Smartfren -->
+                    <div class="flex justify-center">
+                        <img src="public/images/smartferen-logo.png" alt="smartfren-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                    </div>
+                    <!-- XL -->
+                    <div class="flex justify-center">
+                        <img src="public/images/xl-logo.webp" alt="xl-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                    </div>
+                    <!-- Tri -->
+                    <div class="flex justify-center">
+                        <img src="public/images/tri-logo.webp" alt="tri-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Our Process Section -->
         <section id="process" class="py-24 md:py-36 fade-in-section">
             <div class="container mx-auto px-6">
@@ -394,6 +422,9 @@
                 service2Body: "Aplikasi kami dapat dan telah terbukti terintegrasi dengan semua operator di Indonesia, mendukung program koneksi dan program eksklusif dengan telco.",
                 service3Title: "Layanan Call Center 112",
                 service3Body: "Menyediakan dan mengelola infrastruktur Call Center 112 yang andal untuk layanan darurat di berbagai kota dan kabupaten di Indonesia.",
+                // Partner Logos Section
+                partnersTitle: "Mitra Operator Kami",
+                partnersSubtitle: "Kami bangga bermitra dengan operator telekomunikasi terkemuka di Indonesia untuk memberikan solusi terbaik bagi klien kami.",
                 // Process
                 processTitle: "Proses Strategis Kami",
                 processSubtitle: "Metodologi yang terbukti untuk memberikan kepastian dan hasil.",
@@ -452,6 +483,9 @@
                 service2Body: "Our applications can be and have been shown to integrate with all operators in Indonesia, supporting telco connections and exclusive programs.",
                 service3Title: "112 Call Center Service",
                 service3Body: "Providing and managing reliable 112 Call Center infrastructure for emergency services in various cities and districts in Indonesia.",
+                // Partner Logos Section
+                partnersTitle: "Our Operator Partners",
+                partnersSubtitle: "We are proud to partner with leading telecommunications operators in Indonesia to provide the best solutions for our clients.",
                 // Process
                 processTitle: "Our Strategic Process",
                 processSubtitle: "A proven methodology for delivering certainty and results.",
