--- a/index.html
+++ b/index.html
@@ -273,22 +273,22 @@
                     <h2 class="text-4xl md:text-5xl font-bold text-white" data-lang-key="partnersTitle"></h2>
                     <p class="text-lg text-gray-400 mt-4" data-lang-key="partnersSubtitle"></p>
                 </div>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-12 items-center max-w-5xl mx-auto">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-12 items-center max-w-5xl mx-auto">
                     <!-- Telkomsel -->
                     <div class="flex justify-center">
-                        <img src="public/images/mytelkomsel-logo.png" alt="mytelkomsel-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                        <img src="public/images/mytelkomsel-logo.png" alt="mytelkomsel-logo" class="max-w-[200px] max-h-20 w-auto h-auto">
                     </div>
                     <!-- Smartfren -->
                     <div class="flex justify-center">
-                        <img src="public/images/smartferen-logo.png" alt="smartfren-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                        <img src="public/images/smartferen-logo.png" alt="smartfren-logo" class="max-w-[200px] max-h-20 w-auto h-auto">
                     </div>
                     <!-- XL -->
                     <div class="flex justify-center">
-                        <img src="public/images/xl-logo.webp" alt="xl-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                        <img src="public/images/xl-logo.webp" alt="xl-logo" class="max-w-[200px] max-h-20 w-auto h-auto">
                     </div>
                     <!-- Tri -->
                     <div class="flex justify-center">
-                        <img src="public/images/tri-logo.webp" alt="tri-logo" class="max-w-[200px] max-h-20 h-auto w-auto">
+                        <img src="public/images/tri-logo.webp" alt="tri-logo" class="max-w-[200px] max-h-20 w-auto h-auto">
                     </div>
                 </div>
             </div>
