--- a/index.html
+++ b/index.html
@@ -229,11 +229,7 @@
                     <!-- Service 1 -->
                     <div class="service-card glass-card p-8 rounded-3xl flex flex-col items-center text-center">
                         <div class="p-4 bg-gray-800/50 rounded-xl mb-6 inline-block">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" role="img" aria-labelledby="service1TitleSVG">
-                                <title id="service1TitleSVG" data-lang-key="service1Title"></title>
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 18h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M15.5 8.5a.5.5 0 100-1 .5.5 0 000 1zM18 12h-2m0 0a2 2 0 10-4 0 2 2 0 004 0zm-2 4h.01" />
-                            </svg>
+                            <i class="bi bi-phone h-10 w-10 text-blue-500" style="font-size: 2.5rem;"></i>
                         </div>
                         <h3 class="text-2xl font-semibold mb-3 text-white" data-lang-key="service1Title"></h3>
                         <p class="text-gray-300" data-lang-key="service1Body"></p>
@@ -241,10 +237,7 @@
                     <!-- Service 2 -->
                     <div class="service-card glass-card p-8 rounded-3xl flex flex-col items-center text-center">
                         <div class="p-4 bg-gray-800/50 rounded-xl mb-6 inline-block">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" role="img" aria-labelledby="service2TitleSVG">
-                                <title id="service2TitleSVG" data-lang-key="service2Title"></title>
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M21 12.793V21H3V12.793m18 0a9 9 0 00-18 0m18 0c0 4.97-4.03 9-9 9s-9-4.03-9-9m18 0h-3.32a6.372 6.372 0 00-1.08-3.32M3 12.793h3.32a6.372 6.372 0 011.08-3.32M12 3v6.793" />
-                            </svg>
+                            <i class="bi bi-globe h-10 w-10 text-blue-500" style="font-size: 2.5rem;"></i>
                         </div>
                         <h3 class="text-2xl font-semibold mb-3 text-white" data-lang-key="service2Title"></h3>
                         <p class="text-gray-300" data-lang-key="service2Body"></p>
@@ -252,12 +245,9 @@
                     <!-- Service 3 -->
                     <div class="service-card glass-card p-8 rounded-3xl flex flex-col items-center text-center">
                         <div class="p-4 bg-gray-800/50 rounded-xl mb-6 inline-block">
-                             <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" role="img" aria-labelledby="service3TitleSVG">
-                                <title id="service3TitleSVG" data-lang-key="service3Title"></title>
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M16 8l2-2m0 0l2 2m-2-2v4a1 1 0 01-1 1h-4m4-4H8a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-2" />
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 12a9 9 0 019-9m9 9a9 9 0 01-9 9" />
-                                <path d="M15 13l-3-3-3 3" />
-                            </svg>
+                            <i class="bi bi-1-square-fill h-10 w-10 text-blue-500" style="font-size: 2.5rem;"></i>
+                            <i class="bi bi-1-square-fill h-10 w-10 text-blue-500" style="font-size: 2.5rem;"></i>
+                            <i class="bi bi-2-square-fill h-10 w-10 text-blue-500" style="font-size: 2.5rem;"></i>
                         </div>
                         <h3 class="text-2xl font-semibold mb-3 text-white" data-lang-key="service3Title"></h3>
                         <p class="text-gray-300" data-lang-key="service3Body"></p>
