Update background gradient colors and adjust email link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         .dark #hero {
-            background: linear-gradient(135deg, #020024 0%, #090979 35%, #002d5d 100%);
+            background: linear-gradient(135deg, #020024 0%, #794009 35%, #00165d 100%);
             animation: gradient-animation 15s ease infinite;
             background-size: 200% 200%;
         }
@@ -932,7 +932,8 @@
                         <p data-lang-key="footerAddress"></p>
                         <p><span data-lang-key="footerPhone"></span> <a href="tel:+622157953431"
                                 class="hover:text-black dark:hover:text-white">(+62) 21 5795 3431</a></p>
-                        <p>E-mail: <a href="mailto:cs@digitalsandiinformasi.com?subject=[Inquiry] &body=Hello, I would like to..."
+                        <p>E-mail: <a
+                                href="mailto:cs@digitalsandiinformasi.com?subject=[Inquiry] &body=Hello, I would like to..."
                                 class="hover:text-black dark:hover:text-white">cs@digitalsandiinformasi.com</a></p>
                     </address>
                 </div>
@@ -1155,8 +1156,8 @@
                     lineColor: '#2997FF'      // Blue for light mode
                 },
                 dark: {
-                    particleColor: '#ffffff', // White for dark mode
-                    lineColor: '#ffffff'      // White for dark mode
+                    particleColor: '#FFD700', // Yellowish color for particles
+                    lineColor: '#FFD700'      // Yellowish color for lines
                 }
             };
 
