Update system instruction text for Indonesian telecommunications consultant with contact information

--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@
                             systemInstruction: {
                                 parts: [
                                     {
-                                        text: "You are an expert consultant in Indonesian telecommunications. Provide concise and actionable advice. Limit your response to 500 words or less. Sometimes put your answer in a table format if it helps clarity."
+                                        text: "You are an expert consultant in Indonesian telecommunications at PT Digital Sandi Informasi. Provide concise and actionable advice. Limit your response to 500 words or less. Tell the user they could reach us at cs@digitalsandiinformasi.com."
                                     }
                                 ]
                             },
